<resources>
    <!--LEGACY-->
    <string name="app_name">Vital</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--RELEASE-->
    <string name="splash">Vital</string>
    <string name="welcome">Bienvenido (a)</string>
    <string name="register_with_google">Regístrate con Google</string>
    <string name="register_with_facebook">Regístrate con Facebook</string>
    <string name="create_an_account">Crear una cuenta</string>
    <string name="advice">Ten el cuidado de tu alimentación en tus manos</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="create">Crear</string>

    <string name="question_whichGenre">¿Cuál es tu género?</string>
    <string name="question_whichAge">¿Cuántos años tienes?</string>
    <string name="question_whichHeight">¿Cuánto mides?</string>
    <string name="question_whichWeight">¿Cuánto pesas?</string>

    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>

    <string name="hint_age">Ingresar edad</string>
    <string name="hint_height">Ingresar estatura</string>
    <string name="hint_weight">Ingresar peso</string>

    <string name="calculate">Calcular peso ideal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ideal">Ideal</string>
    <string name="normal">Normal</string>
    <string name="actual">Actual</string>
    <string name="recomendations">Recomendaciones</string>
    <string name="favorites">Favoritos</string>

    <!-- RECETAS -->
    <string name="breakfast">Desayunos</string>
    <string name="snack">Snacks</string>
    <string name="meal">Comidas</string>
    <string name="merienda">Meriendas</string>
    <string name="dinner">Cenas</string>
    <string name="desserts">Postres</string>
    <string name="drinks">Bebidas</string>


    <!-- Alimentos -->
    <string name="alimentosText">Selecciona para escoger tus ingredientes</string>
    <string name="lacteos">Lácteos</string>
    <string name="proteina">Proteína</string>
    <string name="legumbres">Legumbres</string>
    <string name="verduras">Verduras</string>
    <string name="frutas">Frutas</string>
    <string name="cereales">Cereales</string>
    <string name="grasas">Grasas</string>

    <!-- Ejercicios -->
    <string name="calentamiento">Calentamiento</string>
    <string name="brazos">Brazos</string>
    <string name="pechos">Pecho</string>
    <string name="espalda">Espalda</string>
    <string name="cintura">Cintura</string>
    <string name="gluteos">Glúteos</string>
    <string name="piernas">Piernas</string>


    <string name="prefs_file">itson.edu.mx.vital.PREFERENCE_FILE_KEY</string>

</resources>