<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:id="@+id/registerActivity">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/advice"
        android:textAlignment="center"
        android:textColor="@color/advice"
        android:textSize="25sp" />

    <EditText android:id="@+id/et_email"
        android:layout_marginTop="40dp"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:background="@drawable/round_gray_button"
        android:hint="@string/email_hint"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/gray_text"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:inputType="textEmailAddress"/>

    <EditText android:id="@+id/et_password"
        android:layout_marginTop="10dp"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:background="@drawable/round_gray_button"
        android:hint="@string/password_hint"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/gray_text"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:inputType="textPassword"/>

    <Button android:id="@+id/btn_create"
        android:layout_marginTop="40dp"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:background="@drawable/round_beige_button"
        android:text="@string/create_an_account"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textAllCaps="false"/>

</LinearLayout>